[MIN] Fixed vertical align

--- a/indico/htdocs/css/messageboxes.css
+++ b/indico/htdocs/css/messageboxes.css
@@ -94,7 +94,7 @@
 .info-message-box .message-text {
     color: #777;
     font-size: 1.2em;
-    padding: 0.3em 0 0.3em 2.5em;
+    padding: 0.2em 0 0.2em 2.5em;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
 
